[package]
name = "raft-demo"
version = "0.1.0"
authors = ["Honghao Li <im.lihh@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-raft = "0.5"
tonic = "0.3"
prost = "0.6"
memstore = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
slog = "2.7"
slog-async = "2.5"
slog-term = "2.6"
once_cell = "1.5"
toml = "0.5"

[build-dependencies]
tonic-build = "0.3"